# typeddbapi

./: LICENSE  README.md  pyproject.toml  zensical.toml
docs/: getting_started.md  index.md
src/typeddbapi/: __init__.py  _types.py  async_.py  dialects.py  exceptions.py  sync.py  utils.py
tests/: test_async.py  test_sync.py  test_utils.py
